--- a/login.html
+++ b/login.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="back-home">
-        <a href="homepage.html">← Back to Home</a>
-    </div>
+   
     <div class="container">
         <div class="login-box">
             <h2>Welcome<br><span>to <b>HamroDental</b></span></h2>
@@ -20,9 +18,14 @@
                 <p>Don't have an account? <a href="signup.html">Signup</a></p>
             </form>
         </div>
-        <div class="side-image"></div>
+        <div class="side-image">
+            <div>
+                <h3>Your Health, Our Priority</h3>
+                <p>Securely log in to manage your appointments, health records, and more.</p>
+            </div>
+        </div>
     </div>
 
     <script src="login.js"></script>
 </body>
-</html>
+</html> 
